--- a/index.html
+++ b/index.html
@@ -140,19 +140,20 @@
                          <img src="fal_assets/images/logos/FPLogo-white.png" class="bi-border-width text-center"
                               style="width:30%!important; margin-top: -100px; float: left">
 
-                         <div id="home-title-slider" class="custom-slider"
-                              data-slick='{"vertical": true, "verticalSwiping": true, "dots": true, "speed":600, "arrows": false, "fade": false, "draggable":true, "slidesToShow": 1}'>
-
+                         <!-- <div id="home-title-slider" class="custom-slider"
+                              data-slick='{"vertical": true, "verticalSwiping": true, "dots": true, "speed":600, "arrows": false, "fade": false, "draggable":true, "slidesToShow": 1}'> -->
+                              
                               <div class="slide">
                                    <h1 class="font-secondary text-8xl sm-text-10xl"
                                         style="padding-top: 30px;font-family: 'Baskervville', sans-serif;">
                                         Communications for a <span class="text-colored">sustainable</span> world
 
                                    </h1>
+                                   
                               </div>
 
 
-                         </div>
+                         <!-- </div> -->
 
 
 
